# scantailor-universal

.github/workflows/: freebsd_14_2-Qt5.yml  linux-Qt5.yml  linux-Qt6.yml  macos-14-Qt5.yml  macos-15-Qt6.yml  macos-26-Qt6.yml  netbsd_10_0-Qt5.yml  windows-Qt5.yml  windows-Qt6.yml
packaging/apple/: CMakeLists.txt
